--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!--KEEP THE WIDTH AND HEIGHT AT THE SAME PERCENTAGES WHEN YOU PUT IN THE NEW CALENDAR!!!!!!-->
     <iframe src="https://calendar.google.com/calendar/embed?src=wellesley.edu_nbgdqv1vt08pgphd1717v7vgs0%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="100%" height="80%" frameborder="0" scrolling="no"><p>your browser does not support iframes</p></iframe>
     <div>
-        <button type="button" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScVJ8QkUMwW-gm_gBYUZ1jN8rF28VvW3dVW5XSCpBEdyZlIIQ/viewform?usp=sf_link">Add Your Own Event</button>
-        <button type="button" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSftILu_PojuEOXtvfhqXRgMc-QVO3gcu7eTz88h7WiQjdb9ig/viewform?usp=sf_link">Add an Org Event</button>
+        <button type="button" target="_blank" onClick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScVJ8QkUMwW-gm_gBYUZ1jN8rF28VvW3dVW5XSCpBEdyZlIIQ/viewform?usp=sf_link');">Add Your Own Event</button>
+        <button type="button" target="_blank" onClick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSftILu_PojuEOXtvfhqXRgMc-QVO3gcu7eTz88h7WiQjdb9ig/viewform?usp=sf_link');">Add an Org Event</button>
    
         <p>Welcome to the Wellesley Events Calendar!  This is a space for Wellesley students to find and post events happening on campus.  You are welcome to submit events to add to this calendar, either as an org or as an individual who just wants to do something fun!  Otherwise, feel free to import this calendar (or individual events) into your own calendar, and thanks for visiting! </p>
     </div>
