--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="middleSection">
     <p style="font-size:11px;">Make sure you're logged into your Wellelsey email account to see events on the calendar. To change which calendars you're viewing, click the arrow at the top right of the calendar.</p>
     <!--KEEP THE WIDTH AND HEIGHT AT THE SAME PERCENTAGES WHEN YOU PUT IN THE NEW CALENDAR!!!!!!-->
-    <iframe src="https://calendar.google.com/calendar/embed?src=wellesley.edu_nbgdqv1vt08pgphd1717v7vgs0%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="100%" height="80%" frameborder="0" scrolling="no"><p>your browser does not support iframes</p></iframe>
+    <iframe src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=wellesley.edu_nbgdqv1vt08pgphd1717v7vgs0%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=wellesley.edu_6e9q11oaporpo1828o1grvpovc%40group.calendar.google.com&amp;color=%235229A3&amp;src=wellesley.edu_t4aufk0iia83nfmq2rel0j669o%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="100%" height="80%" frameborder="0" scrolling="no"></iframe>
     <div>
         <button type="button" target="_blank" onClick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScVJ8QkUMwW-gm_gBYUZ1jN8rF28VvW3dVW5XSCpBEdyZlIIQ/viewform?usp=sf_link');">Add Your Own Event</button>
         <button type="button" target="_blank" onClick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSftILu_PojuEOXtvfhqXRgMc-QVO3gcu7eTz88h7WiQjdb9ig/viewform?usp=sf_link');">Add an Org Event</button>
