--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     How can I import events into my own calendar?
     </h3>
     <p>
-    Just click on the event and choose copy to my calendar!
+    Click on the event and choose copy to my calendar!  Note that if an event's details get edited after you import it, the event on your calendar will not be updated.
     </p>
     <br>
     <h3>
