--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     Why can't I see any events?
     </h3>
     <p>
-    If you can see a calendar but there are no events on it, make sure you're logged into your Wellesley email address in your browser.  The calendar's permissions are limited to people with Wellesley email addresses, so it likely is blocking you from seeing the events because you're not signed in.
+    If you can see a calendar but there are no events on it, make sure you're logged into your Wellesley email address in your browser.
     </p>
     <br>
         <h3>
     What are the criteria for an event to be added to the calendar?
     </h3>
     <p>
-    Every event added to this calendar should be open to all Wellesley students, and cannot break any campus policy or law.  Other than that, feel free to be creative in making your events!
+    Every event added to this calendar should be open to all Wellesley students, and cannot break any campus policy or law.
     </p>
     <br>
         
