--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br>
         <button type="button" target="_blank" onClick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScVJ8QkUMwW-gm_gBYUZ1jN8rF28VvW3dVW5XSCpBEdyZlIIQ/viewform?usp=sf_link');">Add Your Own Event</button>
         <button type="button" target="_blank" onClick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSftILu_PojuEOXtvfhqXRgMc-QVO3gcu7eTz88h7WiQjdb9ig/viewform?usp=sf_link');">Add an Org Event</button>
-        <p style="float:right;">NOTE: If the calendar looks blank, you need to sign into your Wellesley email to view it.</p>
+        <p style="float:right;">NOTE: If the calendar looks blank, you need to sign into your Wellesley email <a href="https://accounts.google.com/signin/v2/identifier?hl=en&continue=https%3A%2F%2Fwww.google.com%2F_%2Fchrome%2Fnewtab%3Fei%3DOICOW-qXOOHy5gKUx4G4Dw%26rlz%3D1C5CHFA_enUS800US800&flowName=GlifWebSignIn&flowEntry=AddSession" target="_blank">here</a>.</p>
         <br><br>
        
    <div class="divider"></div>
@@ -74,7 +74,7 @@
     Why can't I see any events?
     </h3>
     <p>
-    If you can see a calendar but there are no events on it, make sure you're logged into your Wellesley email address in your browser.
+    Make sure you're logged into your Wellesley email address in your browser.  You can do that <a href="https://accounts.google.com/signin/v2/identifier?hl=en&continue=https%3A%2F%2Fwww.google.com%2F_%2Fchrome%2Fnewtab%3Fei%3DOICOW-qXOOHy5gKUx4G4Dw%26rlz%3D1C5CHFA_enUS800US800&flowName=GlifWebSignIn&flowEntry=AddSession" target="_blank">here</a>.
     </p>
     <br>
         <h3>
@@ -170,4 +170,3 @@
     
  
 </html>
-
